data/all_generated_tests/raw_wast_tests/return_EdgeCaseFailuresinbr_table_3028.wast
;; 7. **Negative Index Handling**:    - Incorporate a `br_table` that attempts to use a negative integer as an index.    - **Constraint**: Check implementation's response to negative indices.    - **Edge Case**: Ensures handling of negative values without causing errors.

(assert_invalid
  (module
    (func $negative-index-return
      (block
        (br_table 0 -1 (return))
      )
    )
  )
  "type mismatch"
)